--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 cached-property==1.3.1
+dj-database-url==0.4.2
 Django==2.0.2
 django-currentuser==0.2.2
+django-heroku==0.2.0
 django-url-filter==0.3.4
 djangorestframework==3.7.7
 enum-compat==0.0.2
+gunicorn==19.7.1
+psycopg2==2.7.3.2
 pytz==2017.3
 six==1.11.0
-django-url-filter
+whitenoise==3.3.1
