--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.4.2
 Django==2.0.2
 django-currentuser==0.2.2
 django-heroku==0.2.0
+django-rest-auth==0.9.3
 django-url-filter==0.3.4
 djangorestframework==3.7.7
 enum-compat==0.0.2
