--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ django-url-filter==0.3.4
 djangorestframework==3.7.7
 enum-compat==0.0.2
 gunicorn==19.7.1
+imageio==2.3.0
+MyQR==2.3.1
+numpy==1.14.2
 Pillow==5.1.0
 psycopg2==2.7.3.2
 pytz==2017.3
